# Homework

./: .flake8  .gitignore  README.md  pyproject.toml  report.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_d1689845591154e7___init___py.html  z_d1689845591154e7_masks_py.html  z_d1689845591154e7_proccessing_py.html  z_d1689845591154e7_widget_py.html
report/: report.html
srs/: masks.py  proccessing.py  widget.py
tests/: conftest.py  test_import.py  test_masks.py  test_proccessing.py  test_processing.py  test_widget.py
